<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="5dp"
    android:background="@color/base_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_title"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/schedule_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_schedule_starttime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/schedule_strat_time"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/show_schedule_starttime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/schedule_start_hint"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_shechule_endtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule_end_time"
            android:background="@drawable/bg_button"
            android:textColor="@color/black"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/show_schedule_endtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/schedule_end_hint"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_address"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/schedule_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </LinearLayout>
    <EditText
        android:id="@+id/schedule_content"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="请输入你的日程..."
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000" />


    <Button
        android:id="@+id/schedule_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="100dip"
        android:background="@drawable/bg_button"
        android:text="@string/save" />

</LinearLayout>