<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="10.0dip">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/common_strip_setting_middle"
            android:clickable="false"
            android:focusable="false">

            <ImageView
                android:id="@+id/headPicture"
                android:layout_width="80dip"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/img_default_round_head"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8.0dip"
                android:background="#00000000"
                android:duplicateParentState="true"
                android:gravity="center_vertical|right"
                android:minWidth="100dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="@drawable/common_strip_setting_middle"
            android:clickable="false"
            android:focusable="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12.0dip"
                android:background="#00000000"
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8.0dip"
                android:background="#00000000"
                android:duplicateParentState="true"
                android:gravity="center_vertical|right"
                android:minWidth="100dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_middle"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/age"/>

                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical|right"
                    android:minWidth="100dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_middle"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/sex"/>

                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical|right"
                    android:minWidth="100dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_middle"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/department"/>

                <TextView
                    android:id="@+id/tv_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical|right"
                    android:minWidth="100dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_middle"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/position"/>

                <TextView
                    android:id="@+id/tv_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical|right"
                    android:minWidth="100dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_middle"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/address"/>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical|right"
                    android:minWidth="100dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_middle"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/hiredate"/>

                <TextView
                    android:id="@+id/tv_hiredate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical|right"
                    android:minWidth="100dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/common_strip_setting_middle"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/educationlevel"/>

                <TextView
                    android:id="@+id/tv_educationlevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip"
                    android:background="#00000000"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical|right"
                    android:minWidth="100dp"/>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_pwd"
            android:layout_width="fill_parent"
            android:layout_height="46dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/bg_button1"
            android:text="修改密码"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/exit_app"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip"
            android:layout_marginBottom="20.0dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/bg_button1"
            android:text="@string/logout"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</LinearLayout>