<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="@drawable/form_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_1"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bk2">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md__transparent"
            android:padding="4dip"
            android:src="@drawable/btn_back" />

        <View
            android:id="@+id/line0"
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/btn_back"
            android:background="#aa11264f" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/line0"
            android:background="#009ad6" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_1">

        <TextView
            android:id="@+id/sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_sender"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_email_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/sender"
            android:textColor="@color/color333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_email_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/color333"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txt_sjr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_email_sender"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/email_receiver"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txt_sjr"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_email_title"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/txt_sjr"
            android:textColor="@color/color333"
            android:textSize="14sp" />

        <View
            android:id="@+id/spit_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_email_title"
            android:layout_marginTop="8dp"
            android:background="@color/colorCccccc" />

        <EditText
            android:id="@+id/et_email_content"
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:layout_below="@+id/spit_line"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:hint="请输入邮件正文..."
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/form_bg2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn2_selector"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/send_email"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>